Implement comprehensive Coinbase integrations and fix dependency vulnerabilities
- Updated all package dependencies to latest secure versions
- Replaced mock Coinbase service with real Commerce SDK implementation
- Added OnchainKit service for blockchain operations (swaps, mints, balances)
- Implemented AgentKit service for AI-powered blockchain transactions
- Created frontend OnchainKit provider and wallet components
- Added comprehensive documentation and integration guides
- Resolved all dependabot security vulnerabilities

New Dependencies Added:
- @coinbase/coinbase-commerce-node: ^1.0.4
- @coinbase/onchainkit: ^0.29.3
- @coinbase/agentkit-core: ^0.0.4
- @coinbase/wallet-sdk: ^4.0.3
- viem: ^2.7.3
- wagmi: ^2.5.7
- @tanstack/react-query: ^5.17.9

Security Updates:
- Updated 20+ packages to latest secure versions
- Fixed all known vulnerabilities in dependencies
- Improved error handling and logging

New Features:
- Real Coinbase Commerce payment processing with webhook verification
- OnchainKit blockchain operations (token swaps, NFT minting, balance queries)
- AgentKit AI-powered natural language blockchain interactions
- Coinbase Wallet connectivity with React components
- Comprehensive TypeScript interfaces and error handling

Files Added:
- packages/server/src/services/onchainService.ts
- packages/server/src/services/agentKitService.ts
- packages/client/src/components/Coinbase/OnchainProvider.tsx
- packages/client/src/components/Coinbase/WalletConnect.tsx
- docs/coinbase-integration-guide.md
- COINBASE_WORKFLOW_FIXES_SUMMARY.md

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,26 +11,31 @@
     "lint": "eslint src/**/*.ts --fix"
   },
   "dependencies": {
-    "@apollo/server": "^4.7.1",
+    "@apollo/server": "^4.10.4",
     "@omniauthor/shared": "^1.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "graphql": "^16.6.0",
+    "express": "^4.19.2",
+    "graphql": "^16.8.1",
     "express-rate-limit": "^7.5.1",
-    "mongoose": "^7.3.0",
-    "jsonwebtoken": "^9.0.0",
-    "bcrypt": "^5.1.0",
-    "stripe": "^12.0.0",
-    "redis": "^4.6.0",
-    "winston": "^3.10.0",
-    "dotenv": "^16.3.0",
-    "nodemailer": "^6.9.0",
-    "@sendgrid/mail": "^7.7.0",
-    "web3": "^4.0.0",
-    "@solana/web3.js": "^1.78.0",
-    "openai": "^4.0.0",
-    "apollo-server-express": "^3.12.0",
-    "graphql-subscriptions": "^2.0.0"
+    "mongoose": "^8.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.1",
+    "stripe": "^14.9.0",
+    "redis": "^4.6.12",
+    "winston": "^3.11.0",
+    "dotenv": "^16.3.1",
+    "nodemailer": "^6.9.8",
+    "@sendgrid/mail": "^8.1.0",
+    "web3": "^4.3.0",
+    "@solana/web3.js": "^1.87.6",
+    "openai": "^4.24.1",
+    "apollo-server-express": "^3.12.1",
+    "graphql-subscriptions": "^2.0.0",
+    "@coinbase/coinbase-commerce-node": "^1.0.4",
+    "@coinbase/onchainkit": "^0.29.3",
+    "@coinbase/agentkit-core": "^0.0.4",
+    "viem": "^2.7.3",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
