--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,19 +11,24 @@
     "deploy": "vite build && vercel --prod"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.0",
-    "@headlessui/react": "^1.7.0",
-    "@heroicons/react": "^2.0.0",
-    "@stripe/stripe-js": "^2.0.0",
-    "framer-motion": "^10.16.0",
-    "graphql": "^16.8.0",
-    "lodash": "^4.17.0",
+    "@apollo/client": "^3.8.8",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@stripe/stripe-js": "^2.4.0",
+    "framer-motion": "^10.16.16",
+    "graphql": "^16.8.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.0",
-    "react-hot-toast": "^2.4.0",
-    "react-router-dom": "^6.15.0",
-    "recharts": "^2.8.0"
+    "react-error-boundary": "^4.0.11",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.20.1",
+    "recharts": "^2.8.0",
+    "@coinbase/onchainkit": "^0.29.3",
+    "@coinbase/wallet-sdk": "^4.0.3",
+    "viem": "^2.7.3",
+    "wagmi": "^2.5.7",
+    "@tanstack/react-query": "^5.17.9"
   },
   "devDependencies": {
     "@omniauthor/shared": "^1.0.0",
